src/pattern_detector/adapters/outbound/parsers/antlr/generated/HaskellParser.py
# Generated from src/pattern_detector/adapters/outbound/parsers/antlr/grammars/Haskell.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HaskellParser ( Parser ):

    grammarFileName = "Haskell.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'module'", "'where'", "'import'", "'qualified'", "'as'", 
                     "'hiding'", "'data'", "'newtype'", "'type'", "'family'", 
                     "'class'", "'instance'", "'deriving'", "'stock'", "'anyclass'", 
                     "'default'", "'forall'", "'do'", "'mdo'", "'case'", 
                     "'of'", "'if'", "'then'", "'else'", "'let'", "'in'", 
                     "'::'", "'->'", "'<-'", "'=>'", "'|'", "'='", "<INVALID>", 
                     "','", "'.'", "'\\'", "'~'", "'@'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'`'", "'''" ]

    symbolicNames = [ "<INVALID>", "PRAGMA", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "MODULE", "WHERE", "IMPORT", "QUALIFIED", "AS", "HIDING", 
                      "DATA", "NEWTYPE", "TYPE", "FAMILY", "CLASS", "INSTANCE", 
                      "DERIVING", "STOCK", "ANYCLASS", "DEFAULT", "FORALL", 
                      "DO", "MDO", "CASE", "OF", "IF", "THEN", "ELSE", "LET", 
                      "IN", "DCOLON", "ARROW", "LARROW", "DARROW", "PIPE", 
                      "EQUAL", "SEMI", "COMMA", "DOT", "BACKSLASH", "TILDE", 
                      "AT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", 
                      "RBRACE", "BACKTICK", "TICK", "OPERATOR", "CONID", 
                      "VARID", "INTEGER", "FLOAT", "CHAR_LIT", "STRING_LIT", 
                      "WS" ]

    RULE_haskellModule = 0
    RULE_moduleHeader = 1
    RULE_modId = 2
    RULE_exports = 3
    RULE_exportItem = 4
    RULE_exportSubItem = 5
    RULE_pragma = 6
    RULE_topDeclaration = 7
    RULE_importDeclaration = 8
    RULE_importList = 9
    RULE_importItem = 10
    RULE_dataDeclaration = 11
    RULE_newtypeDeclaration = 12
    RULE_typeSynonymDeclaration = 13
    RULE_typeFamilyDeclaration = 14
    RULE_typeFamilyInstances = 15
    RULE_typeFamilyInstance = 16
    RULE_simpleType = 17
    RULE_typeVar = 18
    RULE_constructors = 19
    RULE_constructor = 20
    RULE_fieldDecl = 21
    RULE_recordField = 22
    RULE_gadtConstructors = 23
    RULE_gadtConstructor = 24
    RULE_derivingClause = 25
    RULE_derivingStrategy = 26
    RULE_derivingTarget = 27
    RULE_standaloneDeriving = 28
    RULE_typeClassDeclaration = 29
    RULE_classBody = 30
    RULE_classMember = 31
    RULE_instanceDeclaration = 32
    RULE_instanceBody = 33
    RULE_instanceMember = 34
    RULE_context = 35
    RULE_classConstraint = 36
    RULE_functionSignature = 37
    RULE_varIdList = 38
    RULE_functionBinding = 39
    RULE_guards = 40
    RULE_guardExpr = 41
    RULE_localDeclarations = 42
    RULE_localDeclaration = 43
    RULE_fixityDeclaration = 44
    RULE_defaultDeclaration = 45
    RULE_typeExpr = 46
    RULE_btype = 47
    RULE_atype = 48
    RULE_kind = 49
    RULE_pattern = 50
    RULE_apat = 51
    RULE_fieldPattern = 52
    RULE_expr = 53
    RULE_infixExpr = 54
    RULE_prefixExpr = 55
    RULE_primaryExpr = 56
    RULE_listCompQuals = 57
    RULE_listCompQual = 58
    RULE_doBlock = 59
    RULE_doStatement = 60
    RULE_caseAlternatives = 61
    RULE_caseAlternative = 62
    RULE_fieldUpdate = 63
    RULE_op = 64
    RULE_qvar = 65
    RULE_qcon = 66
    RULE_literal = 67

    ruleNames =  [ "haskellModule", "moduleHeader", "modId", "exports", 
                   "exportItem", "exportSubItem", "pragma", "topDeclaration", 
                   "importDeclaration", "importList", "importItem", "dataDeclaration", 
                   "newtypeDeclaration", "typeSynonymDeclaration", "typeFamilyDeclaration", 
                   "typeFamilyInstances", "typeFamilyInstance", "simpleType", 
                   "typeVar", "constructors", "constructor", "fieldDecl", 
                   "recordField", "gadtConstructors", "gadtConstructor", 
                   "derivingClause", "derivingStrategy", "derivingTarget", 
                   "standaloneDeriving", "typeClassDeclaration", "classBody", 
                   "classMember", "instanceDeclaration", "instanceBody", 
                   "instanceMember", "context", "classConstraint", "functionSignature", 
                   "varIdList", "functionBinding", "guards", "guardExpr", 
                   "localDeclarations", "localDeclaration", "fixityDeclaration", 
                   "defaultDeclaration", "typeExpr", "btype", "atype", "kind", 
                   "pattern", "apat", "fieldPattern", "expr", "infixExpr", 
                   "prefixExpr", "primaryExpr", "listCompQuals", "listCompQual", 
                   "doBlock", "doStatement", "caseAlternatives", "caseAlternative", 
                   "fieldUpdate", "op", "qvar", "qcon", "literal" ]

    EOF = Token.EOF
    PRAGMA=1
    BLOCK_COMMENT=2
    LINE_COMMENT=3
    MODULE=4
    WHERE=5
    IMPORT=6
    QUALIFIED=7
    AS=8
    HIDING=9
    DATA=10
    NEWTYPE=11
    TYPE=12
    FAMILY=13
    CLASS=14
    INSTANCE=15
    DERIVING=16
    STOCK=17
    ANYCLASS=18
    DEFAULT=19
    FORALL=20
    DO=21
    MDO=22
    CASE=23
    OF=24
    IF=25
    THEN=26
    ELSE=27
    LET=28
    IN=29
    DCOLON=30
    ARROW=31
    LARROW=32
    DARROW=33
    PIPE=34
    EQUAL=35
    SEMI=36
    COMMA=37
    DOT=38
    BACKSLASH=39
    TILDE=40
    AT=41
    LPAREN=42
    RPAREN=43
    LBRACK=44
    RBRACK=45
    LBRACE=46
    RBRACE=47
    BACKTICK=48
    TICK=49
    OPERATOR=50
    CONID=51
    VARID=52
    INTEGER=53
    FLOAT=54
    CHAR_LIT=55
    STRING_LIT=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class HaskellModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HaskellParser.EOF, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(HaskellParser.SEMI)
            else:
                return self.getToken(HaskellParser.SEMI, i)

        def pragma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.PragmaContext)
            else:
                return self.getTypedRuleContext(HaskellParser.PragmaContext,i)


        def moduleHeader(self):
            return self.getTypedRuleContext(HaskellParser.ModuleHeaderContext,0)


        def topDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.TopDeclarationContext)
            else:
                return self.getTypedRuleContext(HaskellParser.TopDeclarationContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_haskellModule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHaskellModule" ):
                return visitor.visitHaskellModule(self)
            else:
                return visitor.visitChildren(self)




    def haskellModule(self):

        localctx = HaskellParser.HaskellModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_haskellModule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 136
                self.match(HaskellParser.SEMI)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 142
                    self.pragma()
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==36:
                        self.state = 143
                        self.match(HaskellParser.SEMI)
                        self.state = 148
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
             
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 154
                self.moduleHeader()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 155
                    self.match(HaskellParser.SEMI)
                    self.state = 160
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7885697395055682) != 0):
                self.state = 177
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6, 10, 11, 12, 14, 15, 16, 19, 42, 50, 51, 52]:
                    self.state = 163
                    self.topDeclaration()
                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==36:
                        self.state = 164
                        self.match(HaskellParser.SEMI)
                        self.state = 169
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass
                elif token in [1]:
                    self.state = 170
                    self.pragma()
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==36:
                        self.state = 171
                        self.match(HaskellParser.SEMI)
                        self.state = 176
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(HaskellParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self):
            return self.getToken(HaskellParser.MODULE, 0)

        def modId(self):
            return self.getTypedRuleContext(HaskellParser.ModIdContext,0)


        def WHERE(self):
            return self.getToken(HaskellParser.WHERE, 0)

        def exports(self):
            return self.getTypedRuleContext(HaskellParser.ExportsContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_moduleHeader

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleHeader" ):
                return visitor.visitModuleHeader(self)
            else:
                return visitor.visitChildren(self)




    def moduleHeader(self):

        localctx = HaskellParser.ModuleHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moduleHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(HaskellParser.MODULE)
            self.state = 185
            self.modId()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 186
                self.exports()


            self.state = 189
            self.match(HaskellParser.WHERE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONID(self, i:int=None):
            if i is None:
                return self.getTokens(HaskellParser.CONID)
            else:
                return self.getToken(HaskellParser.CONID, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(HaskellParser.DOT)
            else:
                return self.getToken(HaskellParser.DOT, i)

        def getRuleIndex(self):
            return HaskellParser.RULE_modId

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModId" ):
                return visitor.visitModId(self)
            else:
                return visitor.visitChildren(self)




    def modId(self):

        localctx = HaskellParser.ModIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(HaskellParser.CONID)
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 192
                self.match(HaskellParser.DOT)
                self.state = 193
                self.match(HaskellParser.CONID)
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(HaskellParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HaskellParser.RPAREN, 0)

        def exportItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.ExportItemContext)
            else:
                return self.getTypedRuleContext(HaskellParser.ExportItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HaskellParser.COMMA)
            else:
                return self.getToken(HaskellParser.COMMA, i)

        def getRuleIndex(self):
            return HaskellParser.RULE_exports

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExports" ):
                return visitor.visitExports(self)
            else:
                return visitor.visitChildren(self)




    def exports(self):

        localctx = HaskellParser.ExportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exports)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(HaskellParser.LPAREN)
            self.state = 208
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6759797487566864) != 0):
                self.state = 200
                self.exportItem()
                self.state = 205
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 201
                        self.match(HaskellParser.COMMA)
                        self.state = 202
                        self.exportItem() 
                    self.state = 207
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)



            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 210
                self.match(HaskellParser.COMMA)


            self.state = 213
            self.match(HaskellParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qvar(self):
            return self.getTypedRuleContext(HaskellParser.QvarContext,0)


        def qcon(self):
            return self.getTypedRuleContext(HaskellParser.QconContext,0)


        def LPAREN(self):
            return self.getToken(HaskellParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HaskellParser.RPAREN, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(HaskellParser.DOT)
            else:
                return self.getToken(HaskellParser.DOT, i)

        def exportSubItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.ExportSubItemContext)
            else:
                return self.getTypedRuleContext(HaskellParser.ExportSubItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HaskellParser.COMMA)
            else:
                return self.getToken(HaskellParser.COMMA, i)

        def MODULE(self):
            return self.getToken(HaskellParser.MODULE, 0)

        def modId(self):
            return self.getTypedRuleContext(HaskellParser.ModIdContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_exportItem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportItem" ):
                return visitor.visitExportItem(self)
            else:
                return visitor.visitChildren(self)




    def exportItem(self):

        localctx = HaskellParser.ExportItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exportItem)
        self._la = 0 # Token type
        try:
            self.state = 237
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 215
                self.qvar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 216
                self.qcon()
                self.state = 233
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==42:
                    self.state = 217
                    self.match(HaskellParser.LPAREN)
                    self.state = 230
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [38]:
                        self.state = 218
                        self.match(HaskellParser.DOT)
                        self.state = 219
                        self.match(HaskellParser.DOT)
                        pass
                    elif token in [42, 43, 51, 52]:
                        self.state = 228
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6759797487566848) != 0):
                            self.state = 220
                            self.exportSubItem()
                            self.state = 225
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==37:
                                self.state = 221
                                self.match(HaskellParser.COMMA)
                                self.state = 222
                                self.exportSubItem()
                                self.state = 227
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 232
                    self.match(HaskellParser.RPAREN)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 235
                self.match(HaskellParser.MODULE)
                self.state = 236
                self.modId()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportSubItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qvar(self):
            return self.getTypedRuleContext(HaskellParser.QvarContext,0)


        def qcon(self):
            return self.getTypedRuleContext(HaskellParser.QconContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_exportSubItem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportSubItem" ):
                return visitor.visitExportSubItem(self)
            else:
                return visitor.visitChildren(self)




    def exportSubItem(self):

        localctx = HaskellParser.ExportSubItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exportSubItem)
        try:
            self.state = 241
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 239
                self.qvar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 240
                self.qcon()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRAGMA(self):
            return self.getToken(HaskellParser.PRAGMA, 0)

        def getRuleIndex(self):
            return HaskellParser.RULE_pragma

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPragma" ):
                return visitor.visitPragma(self)
            else:
                return visitor.visitChildren(self)




    def pragma(self):

        localctx = HaskellParser.PragmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_pragma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 243
            self.match(HaskellParser.PRAGMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.ImportDeclarationContext,0)


        def dataDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.DataDeclarationContext,0)


        def newtypeDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.NewtypeDeclarationContext,0)


        def typeSynonymDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.TypeSynonymDeclarationContext,0)


        def typeFamilyDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.TypeFamilyDeclarationContext,0)


        def typeClassDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.TypeClassDeclarationContext,0)


        def instanceDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.InstanceDeclarationContext,0)


        def functionSignature(self):
            return self.getTypedRuleContext(HaskellParser.FunctionSignatureContext,0)


        def functionBinding(self):
            return self.getTypedRuleContext(HaskellParser.FunctionBindingContext,0)


        def fixityDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.FixityDeclarationContext,0)


        def standaloneDeriving(self):
            return self.getTypedRuleContext(HaskellParser.StandaloneDerivingContext,0)


        def defaultDeclaration(self):
            return self.getTypedRuleContext(HaskellParser.DefaultDeclarationContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_topDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDeclaration" ):
                return visitor.visitTopDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def topDeclaration(self):
